--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,11 +33,15 @@ jobs:
       - name: Validate PR commits with commitlint
         if: github.event_name == 'pull_request'
         run: npx commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
-  # build:
-  #   runs-on: ubuntu-latest
-  #   needs: commitlint
-  #   steps:
-  #     - name: Get repository code
-  #       uses: actions/checkout@v3
-  #     - name: Install dependencies
-  #       run: npm ci
+  build:
+    runs-on: ubuntu-latest
+    needs: commitlint
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Predeploy app
+        run: npm run predeploy
+      - name: Deploy app
+        run: npm run deploy
