ci: updating configuration files for continuous integration and deployment services

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -43,5 +43,14 @@ jobs:
         run: npm ci
       - name: Predeploy app
         run: npm run predeploy
-      - name: Deploy app
-        run: npm run deploy
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          path: build
+          name: build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Get build project
+        uses: actions/upload-pages-artifact@v2
