--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -52,5 +52,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Get build project
-        uses: actions/upload-pages-artifact@v2
+      # - name: Get build project
+      #   uses: actions/upload-pages-artifact@v2
+      #   with:
+      #     name: build
+      - name: Deploy
+        run: deploy
