--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Predeploy app
-        run: npm run predeploy
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
@@ -52,9 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      # - name: Get build project
-      #   uses: actions/upload-pages-artifact@v2
-      #   with:
-      #     name: build
-      - name: Deploy
-        run: deploy
+      - name: Get build project
+        uses: actions/download-artifact@v3
+        with:
+          name: build
