--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
         "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
+        "build": "npm run build",
         "test": "react-scripts test",
         "e2e": "playwright test --project=chromium",
         "test-ci": "CI=true npm test -- --reporters=\"default\" --reporters=\"jest-html-reporter\" --reporters=\"jest-teamcity\""
