--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,7 +1,7 @@
 name: Test app
 on:
   pull_request:
-    types: [opened, edited, reopened]
+    # types: [opened, edited, reopened]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -48,11 +48,26 @@ jobs:
         with:
           path: build
           name: build
-  deploy:
+  release:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Get build project
-        uses: actions/download-artifact@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Create Release
+        id: create_release
+        uses: pipe-cd/actions-gh-release@v2.3.4
         with:
-          name: build
+          release_file: '**/RELEASE'
+          token: ${{ secrets.GITHUB_TOKEN }}
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        # with:
+        #   tag_name: ${{ github.ref }}
+        #   release_name: Release ${{ github.ref }}
+        #   body: |
+        #     Changes in this Release
+        #     - First Change
+        #     - Second Change
+        #   draft: false
+        #   prerelease: false
